2017-10-09  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222779. rdar://problem/34820881

    2017-10-03  Brent Fulgham  <bfulgham@apple.com>

            [Mac] Use safer decoding practices for NSKeyedUnarchiver
            https://bugs.webkit.org/show_bug.cgi?id=175887
            <rdar://problem/33435281>

            Reviewed by Daniel Bates.

            * loader/archive/cf/LegacyWebArchiveMac.mm:
            (WebCore::LegacyWebArchive::createResourceResponseFromMacArchivedData): Use NSSecureCoding to unarchive.
            (WebCore::LegacyWebArchive::createPropertyListRepresentation): Ditto for archiving.
            * testing/cocoa/WebArchiveDumpSupport.mm:
            (WebCoreTestSupport::createCFURLResponseFromResponseData): Update to use NSSecureCoding if possible.

2017-10-09  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r221098. rdar://problem/34771028

    2017-08-23  Jer Noble  <jer.noble@apple.com>

            Track VideoPlaybackQuality metrics when using WebCoreDecompressionSession.
            https://bugs.webkit.org/show_bug.cgi?id=175835
            <rdar://problem/34022234>

            Reviewed by Eric Carlson.

            Test: platform/mac/media/media-source/videoplaybackquality-decompressionsession.html

            Track the total number of frames decoded, dropped, & corrupted, as well as the total
            delay imposed by decoding in the WebCoreDecompressionSession.

            Drive-by fix: implement frame dropping by skipping frames whose presentation times are
            before the video's current time and which aren't depended upon by other frames.

            * platform/cf/CoreMediaSoftLink.cpp:
            * platform/cf/CoreMediaSoftLink.h:
            * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
            (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::videoPlaybackQualityMetrics):
            * platform/graphics/cocoa/WebCoreDecompressionSession.h: